优化Maya章节文档，修订错误。
Signed-off-by: fastestshishen <309760043@qq.com>

--- a/manual/zh/maya/Animation.html
+++ b/manual/zh/maya/Animation.html
@@ -25,15 +25,15 @@
 
     <h3>全对象动画</h3>
 
-    <p>动画关键帧可以添加在Maya中以标准方式添加，使用<b>动画</b>菜单集的 <strong>关键帧 &gt; 设置关键帧</strong>菜单选项设置，或使用快捷键 S 来设置。</p><img
+    <p>动画关键帧可以添加在Maya中以标准方式添加，使用<b>动画</b>菜单集的 <strong>关键帧 > 设置关键帧</strong>菜单选项设置，或使用快捷键 S 来设置。</p><img
       src="files/animation-maya/insert-keyframe.jpg" alt="在Verge3D for Maya中插入关键帧" class="centered"
       style="max-width: 419px">
     <p>出于性能方面的考虑我们建议单独设置关键点，只针对需要动画的通道，例如</p>
 
     <ul>
-      <li><b>平移</b> - 使用 <strong>关键帧 &gt; 设置平移关键帧</strong> 菜单或 *Shift-W* 快捷键。</li>
-      <li><b>旋转</b> - using <strong>关键帧 &gt; 设置旋转关键帧</strong> 菜单或 *Shift-E* 快捷键。</li>
-      <li><b>缩放</b> - using <strong>关键帧 &gt; 设置缩放关键帧</strong> 菜单或 *Shift-R* 快捷键。</li>
+      <li><b>平移</b> - 使用 <strong>关键帧 > 设置平移关键帧</strong> 菜单或 *Shift-W* 快捷键。</li>
+      <li><b>旋转</b> - using <strong>关键帧 > 设置旋转关键帧</strong> 菜单或 *Shift-E* 快捷键。</li>
+      <li><b>缩放</b> - using <strong>关键帧 > 设置缩放关键帧</strong> 菜单或 *Shift-R* 快捷键。</li>
     </ul>
 
     [anchor:Skeletal_Animation]
@@ -43,8 +43,7 @@
     <p>在Verge3D中，三维对象可以在Maya中绑定蒙皮来实现动画。Verge3D支持每个关节最大4个权重（将自动选择4个影响最大的权重，其他的忽略）。</p><img
       src="files/animation-maya/skeletal-animation.jpg" alt="在Verge3D for Maya中为骨骼动画插入关键帧" class="centered"
       style="max-width: 592px">
-    <p>可以通过在关节上设置转换关键帧或利用辅助控制器（如IK控制柄/解算器）来直接实现骨骼动画。要间接地对骨骼进行动画，可在它们共同的父对象上启用*Skeleton Root*和*Custom Frame
-      Range*属性，并设置适当的*From*/*To*作为帧值。参见 <a href="manual/zh/maya/Animation.html#Verge3D_Per_Object_Settings">以下</a>
+    <p>可以通过在关节上设置转换关键帧或利用辅助控制器（如IK控制柄/解算器）来直接实现骨骼动画。要间接地对骨骼进行动画，可在它们共同的父对象上启用*Skeleton Root*和 *Custom Frame Range* 属性，并设置适当的 *From/To* 作为帧值。参见 <a href="manual/zh/maya/Animation.html#Verge3D_Per_Object_Settings">以下</a>
       的更多信息。</p>
 
     [anchor:Blend_Shape_Animation]
@@ -120,7 +119,7 @@
 
     <h3>帧速率</h3>
 
-    <p>影响播放速度的帧率值（默认为24 fps），可以在位于播放序列旁的&ldquo;播放选项面板&rdquo;中设置改变。</p><img src="files/animation-maya/frame-rate.jpg"
+    <p>影响播放速度的帧率值（默认为24 fps），可以在位于播放序列旁的“播放选项面板”中设置改变。</p><img src="files/animation-maya/frame-rate.jpg"
       alt="用于Maya的Verge3D帧速率选择器" class="centered" style="max-width: 383px">
 
     [anchor:Animation_Control_with_Puzzles]
