--- a/manual/zh/maya/Beginners-Guide.html
+++ b/manual/zh/maya/Beginners-Guide.html
@@ -19,7 +19,9 @@
       Verge3D是一款多功能的软件，您可以根据需求和习惯构建自己的使用方式。本指南仅描述了如何构建工作流的一种可能方法，因此请将其作为友好的建议，而不是唯一的标准答案。唯一的先决条件是，你应该有一些有一些Maya的使用经验，才可以基于Verge3D开展工作。
     </p>
 
-    [contents] [anchor:Installation]
+    [contents]
+    
+    [anchor:Installation]
 
     <h2>安装</h2>
 
@@ -47,7 +49,7 @@
       src="files/beginner_guide/app-manager-maya.jpg" class="centered" style="max-width: 1000px">
     <p>点击左侧边栏上的按钮来创建一个新项目。</p><img src="files/app-manager/app-manager-create.jpg" class="centered"
       style="max-width: 569px">
-    <p>输入项目名称（或直接使用<i>My_Awesome_App</i>），然后单击&ldquo;Create App&rdquo;按钮。可以先不改变默认配置选项。</p><img
+    <p>输入项目名称（或直接使用<i>My_Awesome_App</i>），然后单击“Create App”按钮。可以先不改变默认配置选项。</p><img
       src="files/app-manager/app-manager-create-options.jpg" class="centered" style="max-width: 522px">
     <p>新应用创建好后，就会在列表中显示。</p>
 
@@ -60,10 +62,10 @@
     <p>新建的应用只包含一个默认的立方体。点击鼠标左键可旋转视图，滚动鼠标滚轮可放大缩小视图。</p><img src="files/beginners-guide-maya/app-manager-app-running.jpg"
       class="centered" style="max-width: 907px">
     <p class="note">
-      如果浏览器中没有显示默认的立方体，而是提示&ldquo;无法访问此页面&rdquo;，则说明开发服务器已关闭，可能是因为您不小心关闭了3D编辑器的第一个启动实例。在这种情况下，请启动Maya。如已经在运行，请尝试再次点击视图中的<b>App
+      如果浏览器中没有显示默认的立方体，而是提示“无法访问此页面”，则说明开发服务器已关闭，可能是因为您不小心关闭了3D编辑器的第一个启动实例。在这种情况下，请启动Maya。如已经在运行，请尝试再次点击视图中的<b>App
         Mamager</b>按钮。</p>
 
-    <p class="note">极少数情况下，浏览器可能会显示另一个警告：&quot;Ouch! Your graphics card does not support WebGL.&rdquo;
+    <p class="note">极少数情况下，浏览器可能会显示另一个警告："Ouch! Your graphics card does not support WebGL."
       （哎呀，您的显卡不支持WebGL。）这代表着您正在使用已过时的或不被支持的浏览器（例如版本号小于11的IE浏览器)，或是因为您的显卡和驱动程序已被浏览器列入黑名单。请尝试安装最新版的谷歌Chrome浏览器，或更新您的操作系统，或下载安装最新的显卡驱动。如果还不能解决问题，建议更换其他电脑测试。
     </p>
 
@@ -74,7 +76,7 @@
     <p>点击 *M* 图标，即可打开应用对应的 <strong>.ma/.mb</strong> 文件。</p><img
       src="files/beginners-guide-maya/app-manager-app-buttons-open-source-file.jpg" class="centered"
       style="max-width: 800px">
-    <p>您可以如常在Blender中点击&ldquo;文件&gt;打开&rdquo;，或双击应用目录中的文件。建议直接通过Maya菜单&ldquo;文件 &gt; 打开&rdquo;场景文件，因为这样不会新开Maya的程序实例。
+    <p>您可以如常在Blender中点击“文件>打开”，或双击应用目录中的文件。建议直接通过Maya菜单“文件 > 打开”场景文件，因为这样不会新开Maya的程序实例。
     </p>
 
     <p class="note">您需要知道，应用只加载以glTF格式导出的文件，而不是Maya保存场景文件，这一点很重要。所以每次您在Blender源文件中做出修改后，都必须重新导出，以便在应用中实时看到修改后的效果。</p>
@@ -86,7 +88,7 @@
     <p>您可以在场景中添加几个3D对象，导出为*glTF*，然后在应用管理器中点击蓝色的Verge3D图标运行应用，以测试运行效果。</p>
 
     <p class="note">
-      为提高迭代效率，建议始终在浏览器标签中保留该应用页面。这样当您重新导出场景后，只需按下键盘上的&ldquo;F5&rdquo;刷新页面，即可在浏览器中重新加载场景。使用&ldquo;Alt+Tab&rdquo;快捷键在Maya和浏览器之间快速切换，在macOS中的快捷键是是&ldquo;Command+Tab&rdquo;。
+      为提高迭代效率，建议始终在浏览器标签中保留该应用页面。这样当您重新导出场景后，只需按下键盘上的“F5”刷新页面，即可在浏览器中重新加载场景。使用“Alt+Tab”快捷键在Maya和浏览器之间快速切换，在macOS中的快捷键是是“Command+Tab”。
     </p>
 
     [anchor:Puzzles]
@@ -99,12 +101,12 @@
       style="max-width: 800px">
     <p>在应用管理器中单击列表中的*拼图*图标，即可打开拼图编辑器场景，应用场景预览视图将同步显示在其右上角。</p><img src="files/beginners-guide-maya/puzzles-editor.jpg"
       class="centered" style="max-width: 1000px">
-    <p>位于左侧的工具箱包含了拼图的类别目录（如&ldquo;事件&rdquo;、&ldquo;选择器&rdquo;、&ldquo;对象&rdquo;等）。点击展开列表，打开拼图清单，可以选中拼图块并拖拽到工作区中。通过连接组合 <a
+    <p>位于左侧的工具箱包含了拼图的类别目录（如“事件”、“选择器”、“对象”等）。点击展开列表，打开拼图清单，可以选中拼图块并拖拽到工作区中。通过连接组合 <a
         href="manual/zh/introduction/Puzzles-Visual-Logic-Editor.html">各种拼图</a> ，您可在场景为3D对象创建基于用户行为的交互流程。</p><img
       src="files/beginner_guide/puzzles-toolbox.jpg" class="centered" style="max-width: 1000px">
     <p>从下面这个简单易懂的示例做起，先从 *Events | 事件* 类目中拖出 *When Clicked(当点击时)* 拼图，从 *Selectors | 选择器* 中拖出 *Select an object(选择一个对象)*
       拼图。</p><img src="files/beginner_guide/puzzles-toolbox2.jpg" class="centered" style="max-width: 1000px">
-    <p>将它们连接在一起，意味着应用将会一直等待用户点击下拉菜单指定的对象（例如&ldquo;立方体&rdquo;），然后执行在do插槽中的命令。但如果 *do* 插槽中为空则不执行任何操作。</p><img
+    <p>将它们连接在一起，意味着应用将会一直等待用户点击下拉菜单指定的对象（例如“立方体”），然后执行在do插槽中的命令。但如果 *do* 插槽中为空则不执行任何操作。</p><img
       src="files/beginner_guide/puzzles-example.jpg" class="centered" style="max-width: 500px">
     <p>拖出 *hide(隐藏)* 拼图从 *objects* 并插入到该插槽。从 *Object | 对象* 类目拖出另一个对象选择器拼图，并将其与 *hide(隐藏)* 连接。</p><img
       src="files/beginner_guide/puzzles-example2.jpg" class="centered" style="max-width: 500px">
@@ -123,7 +125,7 @@
     <h3>在个人网站发布...</h3>
 
     <p>
-      您已经创建好了应用，也许会希望全世界的互联网用户都有机会浏览和使用。如果您拥有个人网站，这将非常简单&mdash;&mdash;只需将整个应用目录上传到您的服务器中即可（例如通过FTP方式上传）。部署后，您可以在网站中录入应用的HTML文件的链接，或者用HTML的
+      您已经创建好了应用，也许会希望全世界的互联网用户都有机会浏览和使用。如果您拥有个人网站，这将非常简单——只需将整个应用目录上传到您的服务器中即可（例如通过FTP方式上传）。部署后，您可以在网站中录入应用的HTML文件的链接，或者用HTML的
       <strong>iframe</strong> 元素嵌入：</p>
     
     <code>
@@ -132,7 +134,7 @@
 
     <h3>使用WordPress发布...</h3>
 
-    <p>如果您在您的网站是基于WordPress内容管理系统创建的，那发布应用的方式会更简单&mdash;&mdash;请在您的WordPress后台中安装免费的 <a
+    <p>如果您在您的网站是基于WordPress内容管理系统创建的，那发布应用的方式会更简单——请在您的WordPress后台中安装免费的 <a
         href="manual/zh/introduction/Wordpress-Plugin.html">Verge3D for WordPress插件</a> ，即可通过后台上传和嵌入应用。</p>
 
     <h3>发布到Verge3D Network上...</h3>
