--- a/manual/zh/maya/GLTF-Materials.html
+++ b/manual/zh/maya/GLTF-Materials.html
@@ -22,7 +22,7 @@
 
     <h2>设置glTF材质</h2>
 
-    <p>将*aiStandardSurface*着色器节点指定到材质中，并启用位于<b>Verge3D</b>*面板上的<b>GLTF 2.0兼容</b>复选框。</p><img
+    <p>将 *aiStandardSurface* 着色器节点指定到材质中，并启用位于 <b>Verge3D</b> 面板上的<b>GLTF 2.0兼容</b>复选框。</p><img
       src="files/gltf-materials-maya/ai-standard-surface-overview.jpg" class="centered">
     <p>以下aiStandardSurface的设置在Verge3D受到支持：</p>
 
