--- a/manual/zh/maya/Installation.html
+++ b/manual/zh/maya/Installation.html
@@ -43,13 +43,13 @@
     <p><a href="https://www.soft8soft.com/get-verge3d/" target="_blank">下载</a>Verge3D安装包，双击 <strong>.exe</strong>
       文件以运行安装程序。</p>
 
-    <p>选择一个有足够读写权限的安装目录（建议使用默认路径）。不建议在&ldquo;Program Files&rdquo;或&ldquo;Desktop&rdquo;等系统目录中安装。</p><img
+    <p>选择一个有足够读写权限的安装目录（建议使用默认路径）。不建议在"Program Files"或"Desktop"等系统目录中安装。</p><img
       src="files/installation-maya/installer-maya-choosing-path.jpg" class="centered" style="max-width: 499px">
-    <p>安装完成后即可打开Maya。如果Maya正在运行，请先关闭然后再次打开。现在进入&rdquo;<b>插件管理器</b>&rdquo;中设置...</p><img
+    <p>安装完成后即可打开Maya。如果Maya正在运行，请先关闭然后再次打开。现在进入“<b>插件管理器</b>”中设置...</p><img
       src="files/installation-maya/menu-plugin-manager.jpg" class="centered" style="max-width: 785px">
-    <p>...激活*verge3d.py*插件，并启用<b>&rdquo;加载</b>&ldquo;和&rdquo;<b>自动加载</b>&ldquo;复选框。</p><img
+    <p>...激活*verge3d.py*插件，并启用“<b>加载</b>”和“<b>自动加载</b>”复选框。</p><img
       src="files/installation-maya/plugin-manager-enable-verge3d.jpg" class="centered" style="max-width: 450px">
-    <p class="note">此外，如果您想通过菜单 <b>文件 -&gt; 导出全部...</b> 来导出Verge3D场景，请激活 *gltfExport.py* 插件。启用 *gltfExport.py* 插件会在
+    <p class="note">此外，如果您想通过菜单 <b>文件 -> 导出全部...</b> 来导出Verge3D场景，请激活 *gltfExport.py* 插件。启用 *gltfExport.py* 插件会在
       *导出全部* 对话框的文件类型中增加 *Verge3D GLTF* 选项。</p>
 
     <p>现在您应该可以在主菜单栏中看到*Verge3D*菜单了。</p><img src="files/installation-maya/verge3d-menu.jpg" class="centered"
@@ -84,11 +84,11 @@
       style="max-width: 621px">
     <p>然后找到 <em>Verge3D安装路径/maya_plugin/setup</em> 目录并打开 <em>install.py</em> 脚本。</p><img
       src="files/installation-maya/plugin-manager-open-install-script.jpg" class="centered" style="max-width: 847px">
-    <p>在新版Maya中，将弹出如下对话框&mdash;&mdash;点击 *允许*。</p><img src="files/installation-maya/untrusted-plugin-loading.jpg"
+    <p>在新版Maya中，将弹出如下对话框——点击 *允许*。</p><img src="files/installation-maya/untrusted-plugin-loading.jpg"
       class="centered" style="max-width: 569px">
     <p>重启Maya，再次打开 *插件管理器*，请勾选 *加载* 和 *自动加载* 复选框，激活 *verge3d.py* 插件。
     </p><img src="files/installation-maya/plugin-manager-enable-verge3d.jpg" class="centered" style="max-width: 450px">
-    <p class="note">此外，如果您想通过菜单 <b>文件 -&gt; 导出全部...</b> 来导出Verge3D场景，请激活 *gltfExport.py* 插件。启用 *gltfExport.py* 插件会在
+    <p class="note">此外，如果您想通过菜单 <b>文件 -> 导出全部...</b> 来导出Verge3D场景，请激活 *gltfExport.py* 插件。启用 *gltfExport.py* 插件会在
       *导出全部* 对话框的文件类型中增加 *Verge3D GLTF* 选项。</p>
 
     <p>现在您应该可以在主菜单栏中看到*Verge3D*菜单了。</p><img src="files/installation-maya/verge3d-menu.jpg" class="centered"
@@ -109,7 +109,7 @@
       src="files/installation-maya/plugin-manager-open-install-script.jpg" class="centered" style="max-width: 847px">
     <p>重启Maya，再次打开 *插件管理器*，请勾选 *加载* 和 *自动加载* 复选框，激活 *verge3d.py* 插件。</p><img
       src="files/installation-maya/plugin-manager-enable-verge3d.jpg" class="centered" style="max-width: 450px">
-    <p class="note">此外，如果您想通过菜单 <b>文件 -&gt; 导出全部...</b> 来导出Verge3D场景，请激活 *gltfExport.py* 插件。启用 *gltfExport.py* 插件会在
+    <p class="note">此外，如果您想通过菜单 <b>文件 -> 导出全部...</b> 来导出Verge3D场景，请激活 *gltfExport.py* 插件。启用 *gltfExport.py* 插件会在
       *导出全部* 对话框的文件类型中增加 *Verge3D GLTF* 选项。</p>
 
     <p>现在您应该可以在主菜单栏中看到*Verge3D*菜单了。</p><img src="files/installation-maya/verge3d-menu.jpg" class="centered"
@@ -144,14 +144,14 @@
     </code>
 
     <p>
-      保存该文件并打开Maya。如果Maya正在运行，请先关闭然后再次打开。在插件管理器设置对话框中找到*Verge3D*插件。点击开启&ldquo;已加载&rdquo;*和&rdquo;自动加载&rdquo;复选框。现在您应该可以在主菜单栏中看到*Verge3D*菜单了。
+      保存该文件并打开Maya。如果Maya正在运行，请先关闭然后再次打开。在插件管理器设置对话框中找到 *Verge3D* 插件。点击开启 *已加载* 和 *自动加载* 复选框。现在您应该可以在主菜单栏中看到*Verge3D*菜单了。
     </p>
 
 
 
     <h2>向前一步</h2>
 
-    <p>推荐您熟悉一下 <a href="manual/zh/maya/Beginners-Guide.html">入门指南</a>并开始探索！</p>
+    <p>推荐您熟悉一下 <a href="manual/zh/maya/Beginners-Guide.html">入门指南</a> 并开始探索！</p>
 
 
 
