--- a/manual/zh/maya/Lighting-and-Rendering.html
+++ b/manual/zh/maya/Lighting-and-Rendering.html
@@ -37,9 +37,9 @@
     <ul>
       <li><strong>Low (64x64)</strong>和<strong>Medium (128x128)</strong>- 不支持这些值，Verge3D将使用<strong>High
           (256x256)</strong>设置来代替它们。</li>
-      <li><strong>High (256x256)</strong> &mdash; 最合适的质量和较低的内存消耗（默认值）。</li>
-      <li><strong>Higher (512x512)</strong> &mdash; 更好的质量，适中的内存消耗和相对降低的性能。可用在渲染高质量的反射的场景，例如渲染珠宝。</li>
-      <li><strong>Ultra (1024x1024)</strong> &mdash; 高内存消耗，低性能，最佳渲染质量（一般不推荐）。</li>
+      <li><strong>High (256x256)</strong> — 最合适的质量和较低的内存消耗（默认值）。</li>
+      <li><strong>Higher (512x512)</strong> — 更好的质量，适中的内存消耗和相对降低的性能。可用在渲染高质量的反射的场景，例如渲染珠宝。</li>
+      <li><strong>Ultra (1024x1024)</strong> — 高内存消耗，低性能，最佳渲染质量（一般不推荐）。</li>
     </ul>
 
     <p>当为Skydome使用HDR纹理时，确保将<b>色彩空间</b>设置为*Raw*。</p><img src="files/lighting-maya/ai-sky-dome-light-setup.jpg"
@@ -57,12 +57,12 @@
     <p>Verge3D支持以下灯光类型：</p>
 
     <ul>
-      <li>*环境光(Ambient Lights)* &mdash; Verge3D中支持 *颜色(Color)* 和 *强度(Intensity)* 属性(Attribute)。</li>
-      <li>*平行光(Directional Lights)* &mdash; Verge3D中支持 *颜色(Color)* 和 *强度(Intensity)* 属性。</li>
-      <li>*点光源(Point Lights)* &mdash; Verge3D支持 *颜色(Color)* 、 *强度(Intensity)* 和 *衰退速率(Decay Rate)* 属性。</li>
-      <li>*聚光灯(Spot Lights)* &mdash; Verge3D中支持 *颜色(Color)* 、 *强度(Intensity)* 、 *衰退速率(Decay Rate)* 、 *圆锥体角度(Cone Angle)*
+      <li>*环境光(Ambient Lights)* — Verge3D中支持 *颜色(Color)* 和 *强度(Intensity)* 属性(Attribute)。</li>
+      <li>*平行光(Directional Lights)* — Verge3D中支持 *颜色(Color)* 和 *强度(Intensity)* 属性。</li>
+      <li>*点光源(Point Lights)* — Verge3D支持 *颜色(Color)* 、 *强度(Intensity)* 和 *衰退速率(Decay Rate)* 属性。</li>
+      <li>*聚光灯(Spot Lights)* — Verge3D中支持 *颜色(Color)* 、 *强度(Intensity)* 、 *衰退速率(Decay Rate)* 、 *圆锥体角度(Cone Angle)*
         和 *半影角度(Penumbra Angle)* 属性。</li>
-      <li>*区域光(Area Lights)* &mdash; Verge3D中支持 *颜色(Color)* 和 *强度(Intensity)* 属性。光线变换的比例控制着发光的区域。</li>
+      <li>*区域光(Area Lights)* — Verge3D中支持 *颜色(Color)* 和 *强度(Intensity)* 属性。光线变换的比例控制着发光的区域。</li>
     </ul>
 
     <p>此外，您可以为平行灯、点光源和聚光灯指定深度贴图阴影属性。参见 <a href="manual/zh/maya/Shadows.html">这里</a> 的更多信息。</p>
@@ -107,7 +107,7 @@
       <dt>可见性选择集</dt>
       <dd>对象可见性设置：<dl>
           <dt>选择集</dt>
-          <dd>将出现在立方盒反射上的对象限制为属于此选择集的物体。在此处留空选择，将不指定任何对象集&mdash;&mdash;这样所有的场景对象都将被用于生成立方盒反射。默认留空。</dd>
+          <dd>将出现在立方盒反射上的对象限制为属于此选择集的物体。在此处留空选择，将不指定任何对象集——这样所有的场景对象都将被用于生成立方盒反射。默认留空。</dd>
 
           <dt>Invert Visibility</dt>
           <dd>如果指定了 *Selection Set* ，则反转对此光照探头可见对象的选择。默认禁用。</dd>
@@ -136,7 +136,7 @@
     <p>默认情况下，Verge3D渲染的背景与您在Maya的视图中看到的一样（大多数情况下是灰色）。当使用基于图像的照明（由*aiSkyDomeLight*对象提供）时，您会看到环境纹理。</p>
 
 
-    <p>要将背景改为其他颜色，不要在Maya中编辑视图设置，只需更改主摄像机属性中环境<b>&rdquo;背景色&rdquo;</b>并启用Verge3D属性中的*Render Background*属性即可。</p><img
+    <p>要将背景改为其他颜色，不要在Maya中编辑视图设置，只需更改主摄像机属性中环境<b>“背景色”</b>并启用Verge3D属性中的*Render Background*属性即可。</p><img
       src="files/lighting-maya/render-background.jpg" class="centered" style="max-width: 443px">
     <p class="note">您可以使用Maya的<b>渲染视图</b>窗口或Verge3D的*Sneak Peek*功能来预览具有自定义背景的场景。</p>
 
@@ -144,9 +144,9 @@
 
     <h2>全局渲染设置</h2>
 
-    <p>在Maya的主菜单点击<strong>Verge3D -&gt; Export Settings...</strong> 来访问全局渲染设置。</p><img
+    <p>在Maya的主菜单点击<strong>Verge3D -> Export Settings...</strong> 来访问全局渲染设置。</p><img
       src="files/lighting-maya/rendering-settings-global.jpg" class="centered" style="max-width: 412px">
-    <p>*Anti-Aliasing* &mdash; <b>抗锯齿</b>，选择场景使用何种反锯齿算法：</p>
+    <p>*Anti-Aliasing* — <b>抗锯齿</b>，选择场景使用何种反锯齿算法：</p>
 
     <ul>
       <li><b>*Auto* - 自动</b>，使用系统默认方法。</li>
@@ -162,9 +162,9 @@
     <p><b>IBL Environment Mode(基于图像照明环境模式</b></p>
 
     <ul>
-      <li><strong>PMREM (slow)</strong> &mdash; <b>PMREM（慢速）</b>- 高质量（默认值）。</li>
-      <li><strong>Light Probe + Cubemap (medium)</strong> &mdash; <b>光照探头+Cubemap（中速）</b>- 降低基于图像的镜面反射质量，性能更好。</li>
-      <li><strong>Light Probe (fast)</strong> &mdash; <b>光照探头（快速）</b>-禁用基于图像的镜面反射，性能最高。</li>
+      <li><strong>PMREM (slow)</strong> — <b>PMREM（慢速）</b>- 高质量（默认值）。</li>
+      <li><strong>Light Probe + Cubemap (medium)</strong> — <b>光照探头+Cubemap（中速）</b>- 降低基于图像的镜面反射质量，性能更好。</li>
+      <li><strong>Light Probe (fast)</strong> — <b>光照探头（快速）</b>-禁用基于图像的镜面反射，性能最高。</li>
     </ul>
 
     <p>*Outlining Effect* <b>轮廓效果</b>，见下文。</p>
@@ -182,21 +182,21 @@
       src="files/lighting-blender/outline-example.jpg" class="centered" style="max-width: 819px">
     <p>可以使用以下属性来调整轮廓：</p>
 
-    <p>*Enabled* &mdash; 启用/禁用效果。</p>
+    <p>*Enabled* — 启用/禁用效果。</p>
 
-    <p>*Edge Strength* &mdash; 轮廓强度系数。</p>
+    <p>*Edge Strength* — 轮廓强度系数。</p>
 
-    <p>*Edge Glow* &mdash; 额外发光的强度（渲染在在主轮廓边缘之外）。</p>
+    <p>*Edge Glow* — 额外发光的强度（渲染在在主轮廓边缘之外）。</p>
 
-    <p>*Edge Thickness* &mdash; 轮廓边缘厚度系数。</p>
+    <p>*Edge Thickness* — 轮廓边缘厚度系数。</p>
 
-    <p>*Pulse Period* &mdash; 以秒为单位的脉冲周期。指定以下参数，使效果动画化。</p>
+    <p>*Pulse Period* — 以秒为单位的脉冲周期。指定以下参数，使效果动画化。</p>
 
-    <p>*Visible Edge Color* &mdash; <b>可见边颜色</b>。</p>
+    <p>*Visible Edge Color* — <b>可见边颜色</b>。</p>
 
-    <p>*Hidden Edge Color* &mdash; <b>隐藏边颜色</b>，在任何其他场景对象后面的被渲染的轮廓边的颜色。</p>
+    <p>*Hidden Edge Color* — <b>隐藏边颜色</b>，在任何其他场景对象后面的被渲染的轮廓边的颜色。</p>
 
-    <p>*Render Hidden Edge* &mdash; <b>渲染隐藏边</b>，启用/禁用渲染其他场景对象后面的轮廓边。</p>
+    <p>*Render Hidden Edge* — <b>渲染隐藏边</b>，启用/禁用渲染其他场景对象后面的轮廓边。</p>
 
     <p class="note">尽管有可能渲染发光的物体，但在大多数情况下可以用轮廓渲染来提高场景的视觉清晰度。如果您需要从灯或其他明亮的物体上发光，可以考虑使用 <a
         href="manual/zh/puzzles/Postprocessing.html#bloom">辉光后期处理</a> 来代替。</p>
@@ -207,9 +207,9 @@
 
     <p>Verge3D为您的几何对象支持以下额外的渲染设置：</p><img src="files/lighting-maya/rendering-settings.jpg" class="centered"
       style="max-width: 454px">
-    <p>*Rendering Order* &mdash; <b>渲染顺序</b>-修改特定对象的渲染顺序。索引值越小，该对象就越早被渲染。在大多数情况下，当使用混合透明度时，您需要调整这个值，以消除透明度的伪影。</p>
+    <p>*Rendering Order* — <b>渲染顺序</b>-修改特定对象的渲染顺序。索引值越小，该对象就越早被渲染。在大多数情况下，当使用混合透明度时，您需要调整这个值，以消除透明度的伪影。</p>
 
-    <p>*Frustum Culling* &mdash; <b>锥台剔除</b>-启用/禁用对象的锥台剔除优化。如果您有一些可以移动到屏幕空间之外的蒙皮对象，请取消勾选这个选项，以防止它被剔除。</p>
+    <p>*Frustum Culling* — <b>锥台剔除</b>-启用/禁用对象的锥台剔除优化。如果您有一些可以移动到屏幕空间之外的蒙皮对象，请取消勾选这个选项，以防止它被剔除。</p>
 
     [anchor:clipping_planes]
 
@@ -217,7 +217,7 @@
 
     <p>剪切平面（又称剖面图、横截面图、网格截面）是一种用于显示复杂对象（如建筑物、汽车、电器、小玩意、机器等）内部结构的技术。</p><img
       src="files/lighting-maya/clipping-plane-example.jpg" class="centered">
-    <p>要添加一个新的剪贴面，使用位于Maya工具架上的 <strong>Verge3D-&gt;Add a v3dClippingPlane</strong> 对象按钮。</p><img
+    <p>要添加一个新的剪贴面，使用位于Maya工具架上的 <strong>Verge3D->Add a v3dClippingPlane</strong> 对象按钮。</p><img
       src="files/lighting-maya/clipping-plane-new.jpg" class="centered">
     <p>场景中的对象将在剪切平面对象的 *-Y* 方向被剪切。</p>
 
