--- a/manual/zh/maya/Material-Library.html
+++ b/manual/zh/maya/Material-Library.html
@@ -33,12 +33,12 @@
 
     <h2>向项目添加材质</h2>
 
-    <p>要在项目中使用这些材质，请在Hypershade编辑器窗口中使用 <strong>文件 -&gt; 导入</strong>方式。</p><img
+    <p>要在项目中使用这些材质，请在Hypershade编辑器窗口中使用 <strong>文件 -> 导入</strong>方式。</p><img
       src="files/mat-library-maya/hypershade-import.jpg" alt="导入材质到Hypershade编辑器" class="centered"
       style="max-width: 750px">
-    <p>导航到库文件夹，选择*mb*文件，在&ldquo;<b>加载选项</b>&ldquo;中指定&ldquo;<b>不加载引用&rdquo;</b>，然后点击<b>&rdquo;导入&ldquo;</b>。</p><img
+    <p>导航到库文件夹，选择*mb*文件，在“<b>加载选项</b>”中指定“<b>不加载引用</b>”，然后点击“<b>导入</b>”。</p><img
       src="files/mat-library-maya/hypershade-import-no-references.jpg">
-    <p>材重要被导入后，您即可将其指定给模型了。选择一个模型，鼠标右键单击选择 <strong>指定现有材质 -&gt; 材质名称</strong>。</p><img
+    <p>材重要被导入后，您即可将其指定给模型了。选择一个模型，鼠标右键单击选择 <strong>指定现有材质 -> 材质名称</strong>。</p><img
       src="files/mat-library-maya/assign-material.jpg" alt="在Maya中指定材质" class="centered" style="max-width: 750px">
     <p>最后一步是删除材质库中未使用的引用。</p><img src="files/mat-library-maya/outliner-remove-reference.jpg" class="centered"
       style="max-width: 527px">
@@ -52,7 +52,7 @@
       或者，您也可以从头配置环境，如下所示视频教程：
       YouTube： <a href="https://youtu.be/9BzE98XIOnI" target="_blank">Verge3D for Blender Basics - Part 3 - Materials
         and Environment</a>
-      Bilibili: [link:https://www.bilibili.com/video/BV1WT4y1u7pT?p=3 Verge3D for Blender基础 - 03.材质与环境]为此，您可以使用材质包的
+      Bilibili: <a href="https://www.bilibili.com/video/BV1WT4y1u7pT?p=3" target="_blank"> Verge3D for Blender基础 - 03.材质与环境 </a>为此，您可以使用材质包的
       *environments* 文件夹中的任一HDR纹理。</p>
 
     [anchor:uv_mapping]
@@ -69,17 +69,17 @@
 
     <ol>
 
-      <li>打开Maya中的 &quot;文件路径编辑器&quot;。</li><img src="files/mat-library-maya/file-path-editor-menu.jpg" class="centered"
+      <li>打开Maya中的 “文件路径编辑器”。</li><img src="files/mat-library-maya/file-path-editor-menu.jpg" class="centered"
         style="max-width: 532px">
       <li>找到已导入材质所使用的纹理。将这些纹理从*material_maps*复制到应用文件夹中。</li><img src="files/mat-library-maya/file-path-editor.jpg"
         alt="Maya文件路径编辑器" class="centered" style="max-width: 482px">
       <li>
-        在编辑器中选中这些材质，然后点击*重新指定文件路径*按钮。在出现的新对话框中，指定<b>新路径</b>到应用目录，启用&rdquo;<b>重新指定当前已解析文件的路径</b>&ldquo;选项，然后单击&rdquo;<b>重新指定路径</b>&rdquo;。
+        在编辑器中选中这些材质，然后点击*重新指定文件路径*按钮。在出现的新对话框中，指定<b>新路径</b>到应用目录，启用“<b>重新指定当前已解析文件的路径</b>”选项，然后单击“<b>重新指定路径</b>”。
       </li><img src="files/mat-library-maya/file-path-editor-repath.jpg" alt="在Maya中重新指定纹理路径" class="centered"
         style="max-width: 414px">
     </ol>
 
-    <p>您可以通过将应用的文件夹移动到文件系统中的另一个位置来检查应用的完整性。打开*mb(或*ma*)*文件，确保没有产生缺少资产的错误。</p>
+    <p>您可以通过将应用的文件夹移动到文件系统中的另一个位置来检查应用的完整性。打开 *mb*(或*ma*) 文件，确保没有产生缺少资产的错误。</p>
 
 
     <h2>另请参阅</h2>
