--- a/manual/zh/maya/Materials.html
+++ b/manual/zh/maya/Materials.html
@@ -179,7 +179,7 @@
 
     [anchor:condition]
 
-    <h3>&ldquo;条件&rdquo;(Condition)节点</h3>
+    <h3>“条件”(Condition)节点</h3>
 
     <p>在 <a href="https://help.autodesk.com/view/MAYAUL/2022/CHS/?guid=GUID-57CE3E34-3C8D-4F15-971B-219DA6176836"
         target="_blank">这里</a> 查阅详情。</p>
