--- a/manual/zh/maya/Object-Constraints.html
+++ b/manual/zh/maya/Object-Constraints.html
@@ -28,35 +28,35 @@
 
     [anchor:parent_constraint]
 
-    <h3>父子约束</h3>
+    <h3>Parent</h3>
 
     <p>这是对象之间的标准父/子关系的约束版本。</p><img src="files/constraints-maya/parent.jpg" class="centered" style="max-width: 447px">
 
     [anchor:point_constraint]
 
-    <h3>点光源</h3>
+    <h3>Point</h3>
 
     <p>此约束强制设置被所应用的对象和目标的位置相匹配。</p><img src="files/constraints-maya/point.jpg" class="centered"
       style="max-width: 447px">
 
     [anchor:orient_constraint]
 
-    <h3>方向</h3>
+    <h3>Orient</h3>
 
     <p>此约束强制设置被应用的对象和目标的旋转相匹配。</p><img src="files/constraints-maya/orient.jpg" class="centered"
       style="max-width: 446px">
 
     [anchor:scale_constraint]
 
-    <h3>比例</h3>
+    <h3>Scale</h3>
 
     <p>此约束强制设置被应用的对象和目标的缩放相匹配。</p><img src="files/constraints-maya/scale.jpg" class="centered" style="max-width: 446px">
 
     [anchor:aim_constraint]
 
-    <h3>目标</h3>
+    <h3>Aim</h3>
 
-    <p>这个约束将旋转应用于它的所有者，因此它总是将一个给定的*目标轴指向它的目标，而另一个*Up*轴则永久保持与全局Z轴尽可能一致。因此，你可以用这个约束条件来实现广告牌效果。</p><img
+    <p>这个约束将旋转应用于它的所有者，因此它总是将一个给定的 *Aim* 轴指向它的目标，而另一个*Up*轴则永久保持与全局Z轴尽可能一致。因此，你可以用这个约束条件来实现广告牌效果。</p><img
       src="files/constraints-maya/aim.jpg" class="centered" style="max-width: 447px">
     <p class="note">Verge3D仅支持轴对齐的*Aim*和*Up*矢量，如 <strong>
 
@@ -75,7 +75,7 @@
     <p>所有的约束，只要在Maya中指定并导出，就可以用 <a
         href="manual/zh/puzzles/Animation.html#remove_mute_unmute_constraint">拼图</a>的方式删除、静默或解除静默。</p>
 
-    <p>此外， <b>点</b>、方向和<b>比例</b>约束也可以通过 <a href="manual/zh/puzzles/Animation.html#limit_transform">拼图</a>在运行时中指定。</p>
+    <p>此外， *Point/Orient/Scale* 约束也可以通过 <a href="manual/zh/puzzles/Animation.html#limit_transform">拼图</a>在运行时中指定。</p>
 
 
 
