--- a/manual/zh/maya/Shadows.html
+++ b/manual/zh/maya/Shadows.html
@@ -30,8 +30,8 @@
         <p>启用以下视窗选项。</p>
 
         <ul>
-            <li><b>照明</b> -&gt; <b>使用全部灯光</b></li>
-            <li><b>照明</b> -&gt; <b>阴影</b></li>
+            <li><b>照明</b> -> <b>使用全部灯光</b></li>
+            <li><b>照明</b> -> <b>阴影</b></li>
         </ul><img src="files/shadows-maya/lighting-menu.jpg" class="centered">
         <p>请确保场景中至少有一个灯光。</p>
 
@@ -58,7 +58,7 @@
 
         <h3>PCF</h3>
 
-        <p>Percentage Closer Filtering，代表 &quot;百分比近距离过滤&quot;。使用多个阴影贴图查询以实现平滑的阴影渲染。质量和性能一般。</p><img
+        <p>Percentage Closer Filtering，代表 “百分比近距离过滤”。使用多个阴影贴图查询以实现平滑的阴影渲染。质量和性能一般。</p><img
             src="files/shadows-blender/shadow-filtering-pcf.jpg">
 
         [anchor:shadow_filtering_pcf_bilinear]
@@ -122,7 +122,7 @@
             <dt id="filter-size">过滤器大小</dt>
             <dd>控制阴影的模糊度比例。</dd>
             <dt id="bias">偏移(Bias)</dt>
-            <dd>可以调节以消除自阴影伪影及&quot;peter-panning效果。
+            <dd>可以调节以消除自阴影伪影及"peter-panning"效果。
                 <b>注：</b>Peter Panning这个词的名字来源于童话人物彼得潘（他的影子与身体分离并且可以飞翔），此伪影使对象看起来像是悬浮在地表。
             </dd>
             <dt id="esm-bias">ESM偏移(ESM Bias)</dt>
@@ -174,7 +174,7 @@
         <h3>阴影有伪影</h3><img src="files/shadows-blender/self-shadow-artefacts.jpg" class="centered"
             style="max-width: 485px">
         <ul>
-            <li>这种伪影被称为&ldquo;<b>阴影失真(shadow acne)&rdquo;</b>或&ldquo;<b>自影伪影(self-shadow artefacts)</b>&rdquo;。可通过增加 <a
+            <li>这种伪影被称为“<b>阴影失真(shadow acne)</b>”或“<b>自影伪影(self-shadow artefacts)</b>”。可通过增加 <a
                     href="manual/zh/maya/Shadows.html#bias">偏移</a> 值来消除。</li>
         </ul>
 
@@ -216,9 +216,7 @@
 
         <h2>遇到问题？</h2>
 
-        <p>欢迎您随时在 <a href="https://www.soft8soft.com/forums/"
-                target="_blank">论坛</a>上提问！您还可以加入中文用户社区[link:https://shang.qq.com/wpa/qunwpa?idkey=c31cf6597f3ed7ce68bd47aba6bba23049bf973ac6acc59b0a5a7d1bd933b3ea
-            QQ群(171678760)]，在线寻求帮助。</p>
+        <p>欢迎您随时在 <a href="https://www.soft8soft.com/forums/" target="_blank">论坛</a>上提问！您还可以加入中文用户社区<a href="https://shang.qq.com/wpa/qunwpa?idkey=c31cf6597f3ed7ce68bd47aba6bba23049bf973ac6acc59b0a5a7d1bd933b3ea" target="_blank">QQ群(171678760)</a>，在线寻求帮助。</p>
 
     </article>
 </body>
