--- a/manual/zh/maya/Transparency.html
+++ b/manual/zh/maya/Transparency.html
@@ -27,7 +27,7 @@
     <p>混合可以实现平滑过渡，通常看起来更漂亮，但计算成本比剪切高。当多边形以错误的顺序被渲染时，它也可能产生Z向排序的伪影。剪切法更适合用于可视化大量小物体的场景（如草和树叶）。但它会产生没有任何过渡的硬边缘，可能会出现锯齿。
     </p>
 
-    <p>使用材质设置中的 *Alpha Mode *下拉菜单，在混合和遮蔽之间进行选择。</p><img src="files/transparency-maya/alpha-mode.jpg" class="centered"
+    <p>使用材质设置中的 *Alpha Mode* 下拉菜单，在混合和遮蔽之间进行选择。</p><img src="files/transparency-maya/alpha-mode.jpg" class="centered"
       style="max-width: 427px">
 
     [anchor:alpha_add]
@@ -36,8 +36,8 @@
 
     <p>Verge3D还提供了一种特殊的模式，用于在渲染时禁止向深度缓冲区写入数据。这会导致多边形被排除在像素深度比较之外。这样多边形将以加法方式合成，有时会有助于消除混合的伪影。</p><img
       src="files/transparency-common/no-depth-writes.jpg">
-    <p>在*Alpha Mode*下拉菜单中选择*Blend*，并取消勾选材质设置中的*Depth Write*选项以启用该模式。此外，如果您希望透明对象的渲染在所有其他对象之上，请增大 <a
-        href="manual/zh/maya/Lighting-and-Rendering.html#per_object_rendering_settings">对象设置</a> 中的*Rendering Order*值。
+    <p>在 *Alpha Mode* 下拉菜单中选择 *Blend* ，并取消勾选材质设置中的 *Depth Write* 选项以启用该模式。此外，如果您希望透明对象的渲染在所有其他对象之上，请增大 <a
+        href="manual/zh/maya/Lighting-and-Rendering.html#per_object_rendering_settings">对象设置</a> 中的 *Rendering Order* 值。
     </p>
 
     [anchor:standard_surface_materials]
@@ -69,11 +69,11 @@
 
     <h2>glTF兼容的的PBR材质的透明度</h2>
 
-    <p>为了使这些材质具有透明度，应该将透明度贴图作为基础颜色纹理的4（alpha）分量进行烘焙，并将该纹理的*Alpha*输出连接到标准表面材料的*Opacity*输入。</p><img
+    <p>为了使这些材质具有透明度，应该将透明度贴图作为基础颜色纹理的4（alpha）分量进行烘焙，并将该纹理的 *Alpha* 输出连接到标准表面材料的 *Opacity* 输入。</p><img
       src="files/transparency-maya/gltf-compat-transparency.jpg">
-    <p>当没有基础颜色纹理可用时，直接未连接的*Opacity*参数。</a>
+    <p>当没有基础颜色纹理可用时，直接未连接的 *Opacity* 参数。</a>
 
-    <p>使用 Alpha Mode *下拉菜单来选择透明模式。</p>
+    <p>使用 *Alpha Mode* 下拉菜单来选择透明模式。</p>
 
     <h2>遇到问题？</h2>
 
