--- a/manual/zh/maya/Camera.html
+++ b/manual/zh/maya/Camera.html
@@ -24,7 +24,7 @@
     <p>只需在场景中添加一个受支持的摄像机：</p>
 
     <ul>
-      <li><b>摄影机</b> -因为此摄影机指定明确的目标，您应该用Maya的&rdquo;<b>注视当前选择</b>&ldquo;来设定该摄影机的兴趣中心点。</li>
+      <li><b>摄影机</b> -因为此摄影机指定明确的目标，您应该用Maya的”<b>注视当前选择</b>“来设定该摄影机的兴趣中心点。</li>
       <li><b>摄影机和目标</b></li>
       <li><b>摄影机、目标和上方向</b></li>
     </ul>
@@ -58,7 +58,7 @@
 
     <p>*Collision Material* - <b>碰撞材质</b>，是用于与摄影机产生碰撞的材质。</p>
 
-    <p>*Gaze Level* - 注视水平，第一人称摄像机的&ldquo;注视&rdquo;（或&ldquo;头部&rdquo;/&ldquo;眼睛&rdquo;）水平。</p>
+    <p>*Gaze Level* - 注视水平，第一人称摄像机的“注视”（或“头部”/“眼睛”）水平。</p>
 
     <p>*Story Height* - <b>层高</b>，第一人称摄影机的楼层高度。</p>
 
