修订开发指南章节部分内容

--- a/manual/zh/programmers_guide/Animation-system.html
+++ b/manual/zh/programmers_guide/Animation-system.html
@@ -22,8 +22,8 @@
 
     <h3>动画片段</h3>
 
-    <p class="desc">如果您已成功导入3D动画对象（无论它是否有骨骼或变形目标或两者皆有都不要紧）&mdash;&mdash; 例如使用glTF Blender导出器从Blender导出它并使用
-      [page:gltfloader] 将其加载到Verge3D场景中 &mdash;&mdash; 其中一个响应字段应该是一个名为&ldquo;animations&rdquo;的数组， 其中包含此模型的
+    <p class="desc">如果您已成功导入3D动画对象（无论它是否有骨骼或变形目标或两者皆有都不要紧）—— 例如使用glTF Blender导出器从Blender导出它并使用
+      [page:gltfloader] 将其加载到Verge3D场景中 —— 其中一个响应字段应该是一个名为"animations"的数组， 其中包含此模型的
       [page:AnimationClip AnimationClips]
       （请参阅下面可用的加载器列表）。<br /><br />每个*AnimationClip*通常保存对象某个活动的数据。举个例子，假如mesh是一个角色，可能有一个AnimationClip实现步行循环，
       第二个AnimationClip实现跳跃，第三个AnimationClip实现闪避等等。</p>
@@ -32,13 +32,13 @@
 
     <p class="desc">在这样一个*AnimationClip*中，每个动画属性的数据存储在一个单独的[page:keyframetrack]中。假设一个角色对象有[page:skeleton skeleton]（骨架），
       一个关键帧轨道可以存储下臂骨骼位置随时间变化的数据，
-      另一个轨道追踪同一块骨骼的旋转变化，第三个追踪另外一块骨骼的位置、转角和尺寸，等等。应该很清楚，AnimationClip可以由许多这样的轨道组成。<br /><br />假设模型具有[page:Geometry.MorphTargets]（变形目标）&mdash;&mdash;
-      例如一个变形目标显示一个笑脸，另一个显示愤怒的脸 &mdash;&mdash; 每个轨道都持有某个变形目标在AnimationClip运行期间产生的[page:Mesh.morphTargetInfluences
+      另一个轨道追踪同一块骨骼的旋转变化，第三个追踪另外一块骨骼的位置、转角和尺寸，等等。应该很清楚，AnimationClip可以由许多这样的轨道组成。<br /><br />假设模型具有[page:Geometry.MorphTargets]（变形目标）——
+      例如一个变形目标显示一个笑脸，另一个显示愤怒的脸 —— 每个轨道都持有某个变形目标在AnimationClip运行期间产生的[page:Mesh.morphTargetInfluences
       influence]（变形目标影响）如何变化的信息。</p>
 
     <h3>动画混合器</h3>
 
-    <p class="desc">存储的数据仅构成动画的基础 &mdash;&mdash;
+    <p class="desc">存储的数据仅构成动画的基础 ——
       实际播放由[page:animationmixer]控制。您可以想象这不仅仅是动画的播放器，而是作为硬件的模拟，如真正的调音台，可以同时控制和混合若干动画。</p>
 
     <h3>动画行为</h3>
