--- a/manual/zh/programmers_guide/Conventions.html
+++ b/manual/zh/programmers_guide/Conventions.html
@@ -151,7 +151,7 @@
         <th colspan=5>遮蔽，粗糙度，金属度（基于glTF）</th>
       </tr>
       <tr>
-        <td><b>Separate RGB</b> 节点<br>AO取自以 &quot;...Occlusion...&quot; 命名的纹理</td>
+        <td><b>Separate RGB</b> 节点<br>AO取自以 "...Occlusion..." 命名的纹理</td>
         <td>纹理组成部分：<ul>
             <li><b>基本权重贴图</b></li>
             <li><b>粗糙度贴图</b></li>
@@ -180,15 +180,15 @@
       <tr>
         <td>
           <ol>
-            <li>仅使用值 - <b>Principled BSDF -&gt; Alpha</b></li>
-            <li>仅使用纹理 - <b>Principled BSDF-&gt;Base Color</b> (导出) 和 <b>Image Texture-&gt;Alpha</b> 到 <b>Principled
-                BSDF-&gt;Alpha</b> 的四个隐式组件 (视图)</li>
+            <li>仅使用值 - <b>Principled BSDF -> Alpha</b></li>
+            <li>仅使用纹理 - <b>Principled BSDF->Base Color</b> (导出) 和 <b>Image Texture->Alpha</b> 到 <b>Principled
+                BSDF->Alpha</b> 的四个隐式组件 (视图)</li>
           </ol>不可使用乘法
         </td>
         <td>
           <ol>
-            <li>仅使用值 - <b>Principled BSDF -&gt; Alpha</b></li>
-            <li>仅使用纹理- <b>Physical Material-&gt;Base Color</b> (导出) <b>Bitmap</b> 到 <b>Transparency Color Map</b>（仅限视窗）
+            <li>仅使用值 - <b>Principled BSDF -> Alpha</b></li>
+            <li>仅使用纹理- <b>Physical Material->Base Color</b> (导出) <b>Bitmap</b> 到 <b>Transparency Color Map</b>（仅限视窗）
             </li>
           </ol>不可使用乘法？
         </td>
