--- a/manual/zh/programmers_guide/Developer-Kit.html
+++ b/manual/zh/programmers_guide/Developer-Kit.html
@@ -156,7 +156,7 @@
     <h2>向JavaScript API添加新类</h2>
 
     <p>要用一些自定义类来补充Verge3D API，请在DevKit的 *src*
-      文件夹的相关子目录（例如src/extras/myawesomeclass.js)中创建一个以类命名的.js文件。在这个.js文件中实现自定义的类&mdash;&mdash;您可以从已经存在的类中得到启发。最后，通过在
+      文件夹的相关子目录（例如src/extras/myawesomeclass.js)中创建一个以类命名的.js文件。在这个.js文件中实现自定义的类——您可以从已经存在的类中得到启发。最后，通过在
       *src/v3d.js* 文件中添加以下行，在全局名称空间 *v3d* 中注册您的类：</p>
 
     <code>export { MyAwesomeClass } from './extras/MyAwesomeClass.js';</code>
