--- a/manual/zh/programmers_guide/How-to-update-things.html
+++ b/manual/zh/programmers_guide/How-to-update-things.html
@@ -43,11 +43,11 @@
       <h3>[page:BufferGeometry]</h3>
       <div>
         <p>BufferGeometries将（顶点位置、面的索引、法线、颜色、UV和任何自定义属性）信息存储在缓冲区([page:BufferAttribute
-          buffers])中&mdash;&mdash;也就是[link:https://developer.mozilla.org/en-US/docs/Web/JavaScript/Typed_arrays
+          buffers])中——也就是[link:https://developer.mozilla.org/en-US/docs/Web/JavaScript/Typed_arrays
           类型化的数组]。这使得它们通常比标准的几何体更快，缺点是更难用。</p>
         <p>关于更新BufferGeometries，最重要的事情是您不能调整缓冲区的大小（这种操作开销很大，相当于创建了个新的几何体）。但您可以更新缓存区的内容。</p>
         <p>这意味着如果您知道BufferGeometry的一个属性会增长，比如顶点的数量， 您必须预先分配足够大的buffer来容纳可能创建的任何新顶点。当然，这也意味着BufferGeometry将有一个最大大小
-          &mdash;&mdash; 无法创建一个可以高效地无限扩展的BufferGeometry。</p>
+          —— 无法创建一个可以高效地无限扩展的BufferGeometry。</p>
         <p>我们以在渲染时扩展的line来示例。我们将分配可容纳500个顶点的空间但起初仅绘制2个，使用 在500个顶点的缓冲区中，但首先只使用 [page:BufferGeometry.drawRange] 。
 
         </p>
@@ -183,7 +183,7 @@
 
       <p>请记住，这可能是相当慢的，而且会引起帧率的紊乱（特别是在Windows上，因为在DirectX中着色器的编译比OpenGL慢）。</p>
 
-      <p>为了获得更流畅的体验，您可以通过零强度的灯光、白色的纹理或零密度的雾等 &quot;dummy&quot; 值在一定程度上模拟这些特征的变化。</p>
+      <p>为了获得更流畅的体验，您可以通过零强度的灯光、白色的纹理或零密度的雾等 "dummy" 值在一定程度上模拟这些特征的变化。</p>
 
       <p>您可以自由地改变几何体块的材质，但是您不能改变一个物体如何被分割成块（根据面的材质）。</p>
 
