--- a/manual/zh/programmers_guide/Integration-with-Reactjs-Vuejs.html
+++ b/manual/zh/programmers_guide/Integration-with-Reactjs-Vuejs.html
@@ -17,7 +17,7 @@
       将Verge3D场景集成到项目中的方法有很多，其中最简单的方法之一是通过iframe元素单独加载于嵌入。但如果您想直接在应用内使用，那么在这一过程中可能会比较麻烦。但很多项目配置都有其特定的问题和特性。本指南不能覆盖全部，只针对React.js和Vue.js等流行的javascript框架做出介绍。
     </p>
 
-    <p>Verge3D提供了一个简单的例子，说明如何制作一个简单的&ldquo;Hello,World！&rdquo;React或Vue项目，并将一个标准的Verge3D应用集成到其中。示例文件位于Verge3D发行版中的
+    <p>Verge3D提供了一个简单的例子，说明如何制作一个简单的"Hello,World!" React或Vue项目，并将一个标准的Verge3D应用集成到其中。示例文件位于Verge3D发行版中的
       *manager/templates/embeddable* 目录下。</p>
 
     [contents] [anchor:Verge3D_React]
@@ -145,8 +145,8 @@ npm run serve
     <h3>应用管理器设置</h3>
 
     <p>假设我们有一个根据本手册指南创建的React或Vue应用。假设它位于 *APP_PATH* 路径下，而您的Verge3D发行版位于 *VERGE3D_PATH* 路径下。 <br /><br /> 为了
-      &quot;连接&quot; 应用管理器和React/Vue项目，我们需要在 *VERGE3D_PATH/applications* 内创建一个专门的目录（所有Venge3D应用通常都在这个地方）。我们将创建一个符号链接，指向
-      *APP_PATH/public/v3dApp* &mdash;&mdash;这是我们React/Vue项目中与verge3d相关的场景资源和拼图的逻辑文件所在的地方。让我们把新目录称为*my_app*。下面是实现的方法：
+      “连接” 应用管理器和React/Vue项目，我们需要在 *VERGE3D_PATH/applications* 内创建一个专门的目录（所有Venge3D应用通常都在这个地方）。我们将创建一个符号链接，指向
+      *APP_PATH/public/v3dApp* ——这是我们React/Vue项目中与verge3d相关的场景资源和拼图的逻辑文件所在的地方。让我们把新目录称为*my_app*。下面是实现的方法：
     </p><b><u>在Linux中</u></b> 
 <code>
 ln -sr APP_PATH/public/v3dApp VERGE3D_PATH/applications/my_app
