--- a/manual/zh/programmers_guide/Matrix-transformations.html
+++ b/manual/zh/programmers_guide/Matrix-transformations.html
@@ -52,10 +52,10 @@ object.matrix.setRotationFromQuaternion(quaternion); object.matrix.setPosition(s
 
     <h2>旋转与四元数</h2>
     <p>Verge3D提供了两种表示3D旋转的方法：[page:Euler Euler angles](欧拉角) 和 [page:Quaternion
-      Quaternions](四元数)，以及在两者之间转换的方法。欧拉角受到一个叫做&ldquo;万向锁&rdquo;的问题的影响，在这种情况下，某些构型可能会失去一个自由度（阻止对象绕一个轴旋转）。因此，对象旋转是
+      Quaternions](四元数)，以及在两者之间转换的方法。欧拉角受到一个叫做“万向锁”的问题的影响，在这种情况下，某些构型可能会失去一个自由度（阻止对象绕一个轴旋转）。因此，对象旋转是
       <em>始终</em> 存储在对象的 [page:Object3D.quaternion quaternion] 中。</p>
     <p>该库的早期版本中包含一个 *useQuaternion* 属性，当设置为false时，将导致对象的 [page:object3d.matrix matrix]
-      从欧拉角度计算出来。这种方法已经启用&mdash;&mdash;作为替代，您应该使用 [page:Object3D.setRotationFromEuler setRotationFromEuler] 方法，该方法将更新四元数。
+      从欧拉角度计算出来。这种方法已经启用——作为替代，您应该使用 [page:Object3D.setRotationFromEuler setRotationFromEuler] 方法，该方法将更新四元数。
     </p>
 
   </article>
